--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Tech Blog</title>      
     </head>
     <body>
-    <h1>tech blog day one</h1>
+    <h1>welcome to my tech blog</h1>
     </body>
 </HTML>
