--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     </head>
     <body>
     <h1>welcome to my tech blog</h1>
-        <li>
-            <ul>j</ul>
-            </li>
+        
+        <h2>table of contents</h2>
+     <ul>
+         <li>gggg</li>
+     </ul>
     </body>
 </HTML>
