--- a/html.html
+++ b/html.html
@@ -12,6 +12,10 @@
   on <a href="https://codepen.io">CodePen</a>.</span>
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-          <p></p>
+          <p> this is the HTMl skeleton. it is the basic building/foundation for HTML</p>
+          
+          <h2>two sided tags</h2>
+          <p>two sided tags are like "<p></p>" and the thing i quoted right here is what some actual double sided notes would look like. the strong would make the letter in between it bold"<p>random text</p>
+<p>some <strong>more</strong> random text</p>"</p>
       </body>
 </HTML>
