--- a/html.html
+++ b/html.html
@@ -15,7 +15,7 @@
           <p> this is the HTMl skeleton. it is the basic building/foundation for HTML</p>
           
           <h2>two sided tags</h2>
-          <p>two sided tags are like "<p></p>" and the thing i quoted right here is what some actual double sided notes would look like. the strong would make the letter in between it bold"<p>random text</p>
-<p>some <strong>more</strong> random text</p>"</p>
+          <p>two sided tags are like "< p >< / p >"(with no spaces) and the thing i quoted right here is what some actual double sided notes would look like. the strong would make the letter in between it bold"<p>random text</p>
+< p >some < strong >more< / strong > random text< / p >"(once again no spaces in the greater then or less than signs</p>
       </body>
 </HTML>
