--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
        
 <ul>
   <li><a href="html.html">html</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
+  <li><a href="css.html">News</a></li>
 </ul>
     </body>
     
