--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        
 <ul>
   <li><a href="html.html">html</a></li>
-  <li><a href="css.html">News</a></li>
+  <li><a href="css.html">css</a></li>
 </ul>
     </body>
     
