--- a/css.html
+++ b/css.html
@@ -1,11 +1,8 @@
 <!doctype HTML>
 <html>
-  <h1>CSS</h1>
-<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="css,result" data-slug-hash="VwzyMQY" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/lostluigu/pen/VwzyMQY">
-  Untitled</a> by LostLuigu (<a href="https://codepen.io/lostluigu">@lostluigu</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-  <p>the css in this example changes the background of the code and more such as the color, border of the card, fonts, transitions. it messses with all of that and the animation things.</P>
-</html>
+      ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+ </html>
