--- a/html.html
+++ b/html.html
@@ -17,14 +17,10 @@
           <h2>two sided tags</h2>
           <p>two sided tags are like "< p >< / p >"(with no spaces) and the thing i quoted right here is what some actual double sided notes would look like. the strong would make the letter in between it bold"<p>random text</p>
 < p >some < strong >more< / strong > random text< / p >"(once again no spaces in the greater then or less than signs</p>
-     <h1>CSS Notes</h1>
-<p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="css,result" data-slug-hash="VwzyMQY" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-  <span>See the Pen <a href="https://codepen.io/lostluigu/pen/VwzyMQY">
-  Untitled</a> by LostLuigu (<a href="https://codepen.io/lostluigu">@lostluigu</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-  <p>the css in this example changes the background of the code and more such as the color, border of the card, fonts, transitions. it messses with all of that and the animation things.</P>
 
-      </body>
 </HTML>
+   ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
