--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <h1>welcome to my tech blog</h1>
      
      <h2>table of contents</h2>
-       
+    <nav>   
 <ul>
   <li><a href="html.html">html</a></li>
   <li><a href="css.html">css</a></li>
 </ul>
+        <nav>
     </body>
 
 </HTML>
+        <style>
+               ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+            }
+        </style>
