--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <nav>   
 <ul>
   <li><a href="html.html">html</a></li>
-  <li><a href="css.html">css</a></li>
+   <li><a href="css.html">css</a></li>
+   <li><a href="js.html">JS</a></li>
 </ul>
         <nav>
     </body>
