--- a/js.html
+++ b/js.html
@@ -1,3 +1,4 @@
+<!DocType HTML>
 <h1>JS(javascript)</h1>
 <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="OJjdEeW" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/lostluigu/pen/OJjdEeW">
