--- a/js.html
+++ b/js.html
@@ -8,3 +8,5 @@
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
 <p> the code in the JS tab makes it to where whenever you type one number in each box it will add, subtract, multiply, and divide them. so if i put 8 in the first one and 7 in the second box it will put the sum, difference, product, and quotient under it. </p>
+<p> at the bottom of the JS tab that code is what allows the website to get all those answers.</p>
+<p> "n1", "n2", "go", "ans", are all ids for the js so it does what its meant to do.</p>
