--- a/css.html
+++ b/css.html
@@ -8,6 +8,7 @@
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
   <p>the css in this example changes the background of the code and more such as the color, border of the card, fonts, transitions. it messses with all of that and the animation things.</P>
-
+  <p> the code also adds the card shape and how it looks. it makes it look round and have the shadow.</p>
+  <p> the code also gives the font to the writing on the site and gives it the color and what it looks like when its hovered over</p>
       </body>
  </html>
