--- a/html.html
+++ b/html.html
@@ -18,4 +18,7 @@
           <p>two sided tags are like "< p >< / p >"(with no spaces) and the thing i quoted right here is what some actual double sided notes would look like. the strong would make the letter in between it bold"<p>random text</p>
 < p >some < strong >more< / strong > random text< / p >"(once again no spaces in the greater then or less than signs</p>
 
+    
+    <h2>one sided tages</h2>
+    <p> one sided tags don't need a closing tag. what is required in a one sided tag is an alt in the tag. so it would have to be put as "< br / >" this is a break tag but as you can see its not like two sided tags where is needed to be typed like this "< p > some random text < /p >" </p>
 </HTML>
