--- a/js.html
+++ b/js.html
@@ -1,5 +1,6 @@
 <!DocType HTML>
 <h1>JS(javascript)</h1>
+<h2><a href="index.html">back to home</a></h2>
 <h2>number listing</h2>
 <p class="codepen" data-height="300" data-default-tab="js,result" data-slug-hash="OJjdEeW" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/lostluigu/pen/OJjdEeW">
