--- a/html.html
+++ b/html.html
@@ -5,6 +5,7 @@
     </head>
       <body>
         <h1>HTML notes</h1>
+          <h2><a href="index.html">back to home</a></h2>
         <h2>HTML skeleton</h2>
         <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="jOLaNqZ" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/lostluigu/pen/jOLaNqZ">
