--- a/css.html
+++ b/css.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <html>
         <h1>CSS Notes</h1>
+        <h2><a href="index.html">back to home</a></h2>
 <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="css,result" data-slug-hash="VwzyMQY" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/lostluigu/pen/VwzyMQY">
   Untitled</a> by LostLuigu (<a href="https://codepen.io/lostluigu">@lostluigu</a>)
