--- a/css.html
+++ b/css.html
@@ -1,5 +1,5 @@
 <!doctype HTML>
-<html>
+<HTML>
         <h1>CSS Notes</h1>
         <h2><a href="index.html">back to home</a></h2>
 <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="css,result" data-slug-hash="VwzyMQY" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
@@ -12,4 +12,4 @@
   <p> the code also adds the card shape and how it looks. it makes it look round and have the shadow.</p>
   <p> the code also gives the font to the writing on the site and gives it the color and what it looks like when its hovered over</p>
       </body>
- </html>
+ </HTML>
