--- a/js.html
+++ b/js.html
@@ -1,4 +1,5 @@
 <!DocType HTML>
+<HTML>
 <h1>JS(javascript)</h1>
 <h2><a href="index.html">back to home</a></h2>
 <h2>number listing</h2>
@@ -20,3 +21,4 @@
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 <p> in this JS code we are taking namees and numbers and finding certain things from those lists. like with the numbers we are looking for the first number bigger then 100 and with the name we are looking for the name "misael"</p> 
+</HTML>
