--- a/js.html
+++ b/js.html
@@ -1,6 +1,6 @@
 <!DocType HTML>
 <HTML>
-<link href="style.css">
+<link rel="stylesheet" href="style.css">
 <h1>JS(javascript)</h1>
 <h2><a href="index.html">back to home</a></h2>
 <h2>number listing</h2>
