--- a/js.html
+++ b/js.html
@@ -1,9 +1,9 @@
 <!DocType HTML>
 <HTML>
 <link rel="stylesheet" href="style.css">
-<h1>JS(javascript)</h1>
-<h2><a href="index.html">back to home</a></h2>
-<h2>number listing</h2>
+<h1 id="head">JS(javascript)</h1>
+<h2 id="head"><a href="index.html">back to home</a></h2>
+<h2 id="head">number listing</h2>
 <p class="codepen" data-height="300" data-default-tab="js,result" data-slug-hash="OJjdEeW" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/lostluigu/pen/OJjdEeW">
   JS-operator  </a> by LostLuigu (<a href="https://codepen.io/lostluigu">@lostluigu</a>)
@@ -14,7 +14,7 @@
 <p> the code in the JS tab makes it to where whenever you type one number in each box it will add, subtract, multiply, and divide them. so if i put 8 in the first one and 7 in the second box it will put the sum, difference, product, and quotient under it. </p>
 <p> at the bottom of the JS tab that code is what allows the website to get all those answers.</p>
 <p> "n1", "n2", "go", "ans", are all ids for the js so it does what its meant to do.</p>
-<h2>Arrays</h2>
+<h2 id="head">Arrays</h2>
 <p class="codepen" data-height="300" data-default-tab="js,result" data-slug-hash="bGoVVpo" data-user="lostluigu" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/lostluigu/pen/bGoVVpo">
   Arrays 3</a> by LostLuigu (<a href="https://codepen.io/lostluigu">@lostluigu</a>)
