--- a/html.html
+++ b/html.html
@@ -1,4 +1,5 @@
 <!DocType HTML>
+<link rel="stylesheet" href="style.css">
 <HTML>
     <head>
       <title>tech blog - HTML</title>
@@ -22,4 +23,5 @@
     
     <h2>one sided tages</h2>
     <p> one sided tags don't need a closing tag. what is required in a one sided tag is an alt in the tag. so it would have to be put as "< br / >" this is a break tag but as you can see its not like two sided tags where is needed to be typed like this "< p > some random text < /p >" </p>
-</HTML>
+
+    </HTML>
