--- a/css.html
+++ b/css.html
@@ -1,4 +1,5 @@
 <!doctype HTML>
+<link rel="stylesheet" href="style.css">
 <HTML>
         <h1>CSS Notes</h1>
         <h2><a href="index.html">back to home</a></h2>
